Fix menu being clipped

--- a/src/Client/Style/board.sass
+++ b/src/Client/Style/board.sass
@@ -11,8 +11,10 @@ $entity-width: 275px
 
 .entities
   align-items: flex-start
+  box-sizing: border-box
   display: flex
   flex-wrap: wrap
+  height: 100%
   padding: 5px
 
 .entity
